// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";



package pusGroundModel.protobuf;

message Pus011EncapsulatingTc {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER sourceId = 1;
  optional ccsds_mal.protobuf.UINTEGER commandApid = 2;
  optional ccsds_mal.protobuf.UINTEGER sequenceCount = 3;
}
